[project]
name = "openconnect-sso"
version = "0.8.2"
description = "Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs"
license = "GPL-3.0-only"
authors = [{name = "László Vaskó", email = "laszlo.vasko@outlook.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]
dependencies = [
    "attrs>=18.2",
    "colorama>=0.4.0",
    "lxml>=4.3",
    "keyring>=21.1",
    "prompt-toolkit>=3.0.3",
    "pyxdg>=0.26,<0.29",
    "requests>=2.22",
    "structlog>=20.1",
    "toml>=0.10",
    "setuptools>40.0",
    "PySocks>=1.7.1",
    "PyQt6>=6.3.0",
    "PyQt6-WebEngine>=6.3.0",
    "pyotp>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "coverage_enable_subprocess>=1.0",
    "pytest>=8.0",
    "black==24.10.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "pytest-httpserver>=1.1",
]

[tool.poetry.group.dev.dependencies]
coverage_enable_subprocess = "^1.0"
pytest = "^8.0"
black = "==24.10.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0"
pytest-httpserver = "^1.1"

[project.scripts]
openconnect-sso = "openconnect_sso.cli:main"

[project.urls]
Homepage = "https://github.com/vlaci/openconnect-sso"
Repository = "https://github.com/vlaci/openconnect-sso"

[tool.setuptools.packages.find]
include = ["openconnect_sso*"]


[tool.setuptools.package-data]
"openconnect_sso.browser" = ["*.js"]

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
