[metadata]
name = openconnect-sso
version = 0.8.2
description = Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
author = László Vaskó
author_email = laszlo.vasko@outlook.com
url = https://github.com/vlaci/openconnect-sso
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Operating System :: POSIX :: Linux
    Topic :: System :: Networking

[options]
packages = find:
python_requires = >=3.8
install_requires =
    attrs>=18.2
    colorama>=0.4.0
    lxml>=4.3
    keyring>=21.1
    prompt-toolkit>=3.0.3
    pyxdg>=0.26,<0.29
    requests>=2.22
    structlog>=20.1
    toml>=0.10
    setuptools>40.0
    PySocks>=1.7.1

[options.packages.find]
include = openconnect_sso*

[options.package_data]
openconnect_sso.browser = *.js

[options.entry_points]
console_scripts =
    openconnect-sso = openconnect_sso.cli:main

[options.extras_require]
dev =
    coverage_enable_subprocess>=1.0
    pytest>=7.2
    black==22.10
    pytest-asyncio>=0.20.1
    pytest-cov>=4.0
    pytest-httpserver>=1.0
